# scratch_ros_patches

./: readme_patches_ros2.md
.github/workflows/: pip.yml
repoes/01_benchmark/cmake/: GoogleTest.cmake.in
repoes/03_memory/test/: CMakeLists.txt
repoes/10_lz4/tests/cmake/: CMakeLists.txt  package.xml
