<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cmake_install_test</name>
  <version>1.1.1</version>
  <description>Customized cmake_install_test</description>
  <maintainer email="liangyx25@163.com">EasonLiang</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/lz4/lz4/</url>

  <depend>LZ4</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
